<resources>
    <string name="app_name">OpenCRM</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="view_orders">View Orders</string>
    <string name="new_order">New Order</string>
    <string name="add_order">Add Order</string>
    <string name="customer">Customer</string>
    <string name="salesman">Salesman</string>
    <string name="cost">Cost</string>
    <string name="status">Status</string>
    <string name="column_1">Order No.</string>
    <string name="column_2">Customer</string>
    <string name="column_3">Salesman</string>
    <string name="column_4">Cost</string>
    <string name="column_5">Status</string>
    <string name="order_complete_status">Order Updated. Redirected to View Orders...Please wait</string>
    <string name="update_failed_status">Failed to update.</string>
    <string name="update_in_progress">Updating..</string>
    <string name="update_order_heading">Update Order</string>
    <string name="update_order_button">Update Order</string>
</resources>
